fix(business): 全量业务功能审查修复（20项，P0-P2）
P0 修复（4项）：
- P0-1: 优惠券折扣恒为0 — computeCouponDiscount 重写为直接查模板计算
  （不再依赖 availableCoupons，避免已核销券查不到导致折扣为0）
- P0-2: 用户售后死路 + 多退配送费 — 新增售后审核/拒绝/退款执行端点
  （RefundStatus 新增 PROCESSING/REJECTED，PaymentController 三个端点闭环）
  （退款金额修正：amount 已含配送费，不再重复加）
- P0-3: 支付失败库存泄漏 — handlePaymentFail 新增库存回退 + stockRefunded 标记
  （与补偿任务 Redis 幂等 key 同步写入，防双重回退）
- P0-4: 拼团未成团退款不回库存 — refundNotFormedParticipants 新增 restoreStockForOrder

P1 修复（1项）：
- P1-4: 堂食分账问题 — parts 上限 20 校验 + 主订单金额置 0
  （ReportServiceImpl 排除 SPLIT 状态主订单，防营收翻倍）

P2 修复（4项）：
- P2-1: 财务对账 doubleValue 精度 — 改 BigDecimal.compareTo
- P2-2: 提现取消 CAS — updateById 改条件更新
- P2-3: 门店权限静默返回 — 改 throw CustomException
- P2-4: 堂食开台异常被吞 — catch 改 throw

二次复查修复（3项）：
- HIGH-14: 售后退款幂等 — executeUserRefund 开头加 SUCCESS 状态守卫
- HIGH-15: 收银台 CAS — updateById 改 lambdaUpdate 条件更新
- CRITICAL-9: 0元订单无支付路径 — pay 方法 amount<=0 时自动完成支付

测试：448 个测试 0 失败 0 错误，BUILD SUCCESS

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>